tests/baselines/reference/ES5For-of20(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
ES5For-of20.ts(3,20): error TS2448: Block-scoped variable 'v' used before its declaration.
ES5For-of20.ts(4,15): error TS1155: 'const' declarations must be initialized.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== ES5For-of20.ts (2 errors) ====
    for (let v of []) {
        let v;
        for (let v of [v]) {
                       ~
!!! error TS2448: Block-scoped variable 'v' used before its declaration.
!!! related TS2728 ES5For-of20.ts:3:14: 'v' is declared here.
            const v;
                  ~
!!! error TS1155: 'const' declarations must be initialized.
        }
    }